# pico_smp

./: .gitmodules  LICENSE  README.md
hal/vs1053/: vs1053.c  vs1053_types.h
main/: CMakeLists.txt  FreeRTOSConfig.h  main.c
